--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
-            
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1      
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -25,3 +27,5 @@ jobs:
         with:
           push: ${{ github.event_name != 'pull_request' }}
           tags: farzadrastgar/allhands22:latest,farzadrastgar/allhands22:01
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
